TODO: Set location of tests input data with an environment variable and then correct it with getenv() and strcat() 	modified:   todo

--- a/todo
+++ b/todo
@@ -21,3 +21,8 @@
 * lector de offs
 * simetria 
 * molmotif, etc. -> mas eficiente
+
+
+Daniel
+--------------
+* correct test data location scripts (getenv(),strcat()))
