--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2013-07-15  Alberto Otero de la Roza  <aoterodelaroza@ucmerced.edu>
+
+	* escher_data/mol/burrito/: added test. Carbon nanotube with
+	fullerene and wrapping -> nanoburrito. Long test (~6 mins).
+
 2013-07-09  Alberto Otero de la Roza  <aoterodelaroza@ucmerced.edu>
 
 	* .gitignore: included tools/.
