little fix to README

--- a/README
+++ b/README
@@ -215,7 +215,9 @@ recommend, then it is taken as the center of mass of the system.
 Image gallery
 -------------
 
-Still under construction.
+You can find several examples of escher plots in the examples
+directory (escher_data) and also in the [[Image gallery|Image Gallery]] and in the
+[[Anthology_of_interest|Anthology of Interest]].
 
 Copyright notice
 ----------------
