--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,20 @@
+2013-08-20  Alberto Otero de la Roza  <aoterodelaroza@ucmerced.edu>
+
+	* todo: made entry for implementing schmueli's symmetry builder
+	and to clean up the crystal description. Maybe the R matrix would
+	be enough for internal computations?
+
+	* src/cr_write_critic2.m: removed the GUESS keyword, which is no
+	longer used in the new critic2.
+
+	* src/cr_moveorigin.m: created. Displaces the origin of the cell
+	to a new location.
+
+	* src/cr_insertvacuum.m: created. Inserts a vacuum along a
+	crystallographic direction, possibly chopping off some atoms and
+	recentering the cell so the inversion center is preserved at the
+	origin. A nice tool for building surfaces.
+
 2013-08-18  Alberto Otero de la Roza  <aoterodelaroza@ucmerced.edu>
 
 	* README: small fix.
