--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2013-08-20  Alberto Otero de la Roza  <aoterodelaroza@ucmerced.edu>
 
+	* src/cr_write_vasp.m: changed default LOG=1 in cr_write_vasp.
+
 	* todo: made entry for implementing schmueli's symmetry builder
 	and to clean up the crystal description. Maybe the R matrix would
 	be enough for internal computations?
