--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2013-08-20  Alberto Otero de la Roza  <aoterodelaroza@ucmerced.edu>
 
 	* src/cr_write_vasp.m: changed default LOG=1 in cr_write_vasp.
+	Fixed bug: it's cr.r', not cr.r for VASP inputs.
 
 	* todo: made entry for implementing schmueli's symmetry builder
 	and to clean up the crystal description. Maybe the R matrix would
