--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2013-08-20  Alberto Otero de la Roza  <aoterodelaroza@ucmerced.edu>
 
+	* src/cr_newcell.m: changed fvol check to disallow negative
+	volumes. 
+
 	* src/cr_write_vasp.m: changed default LOG=1 in cr_write_vasp.
 	Fixed bug: it's cr.r', not cr.r for VASP inputs.
 
