--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,16 @@
+2013-08-23  Alberto Otero de la Roza  <aoterodelaroza@ucmerced.edu>
+
+	* src/mol_polyhedron.m: changed default for transparency.
+
+	* src/cr_unitcell.m: fixed documentation.
+
+	* src/cr_read_vasp.m: now accepts a cell array of atomic symbols
+	instead of the POTCAR.
+
 2013-08-20  Alberto Otero de la Roza  <aoterodelaroza@ucmerced.edu>
 
 	* src/cr_newcell.m: changed fvol check to disallow negative
-	volumes. 
+	volumes.
 
 	* src/cr_write_vasp.m: changed default LOG=1 in cr_write_vasp.
 	Fixed bug: it's cr.r', not cr.r for VASP inputs.
