--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2013-09-11  Alberto Otero de la Roza  <aoterodelaroza@ucmerced.edu>
+
+	* src/mol_dbstart.m: made continuation symbol '\' be '...' -> the
+	latest version of octave says \ is going to be deprecated soon. 
+
 2013-08-29  Alberto Otero de la Roza  <aoterodelaroza@ucmerced.edu>
 
 	* src/rep_refaxes.m: commented out negative axes. Sticks a little
