fixed cr_spherebox to avoid non-negative ix0

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,11 @@
 2013-09-11  Alberto Otero de la Roza  <aoterodelaroza@ucmerced.edu>
 
+	* src/cr_spherebox.m (xc): fixed cr_crystalbox -> was giving
+	strange results for slabs because ix0 was not negative for some
+	x0. 
+
 	* src/mol_dbstart.m: made continuation symbol '\' be '...' -> the
-	latest version of octave says \ is going to be deprecated soon. 
+	latest version of octave says \ is going to be deprecated soon.
 
 2013-08-29  Alberto Otero de la Roza  <aoterodelaroza@ucmerced.edu>
 
