--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2013-09-11  Alberto Otero de la Roza  <aoterodelaroza@ucmerced.edu>
 
+	* all: moved /usr/bin/octave to /etc/alternatives/octave .
+
 	* src/cr_spherebox.m: a more reasonable definition of the
 	lattice vector star.
 
