mol_polyhedron now gives back the sub-molecule

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2013-09-11  Alberto Otero de la Roza  <aoterodelaroza@ucmerced.edu>
 
+	* src/mol_polyhedron.m: returns the molecule with the centers and
+	the molecule with the vertices. Also, fixed name and
+	continuations.
+
 	* src/rep_addcamera_modelview.m: use rep_getcm to get the center
 	of mass instead of the calculating the barycenter of the balls on
 	the spot.
