added one todo entry

--- a/todo
+++ b/todo
@@ -1,3 +1,4 @@
+* mol_readlog
 * texdb a struct instead of a cell
 * Routine for adaptively set the cylinder and sphere based on the number
   of balls and sticks.
