implemented mol_readlog: gaussian output reader

--- a/doc/devs.org
+++ b/doc/devs.org
@@ -67,6 +67,7 @@ v means variable (global)
 | x | atmass               | array        | 1xnat          | Atomic masses                                               |
 | x | atxyz                | array        | 3xnat          | Coordinates (angstrom)                                      |
 | + | mol_readxyz          | fun          | mol            | Read an xyz file (in different formats)                     |
+| + | mol_readlog          | fun          | mol            | Read a gaussian output file                                 |
 | + | mol_readcube         | fun          | mol            | Read the header of a gaussian cube file                     |
 | + | mol_readfchk         | fun          | mol            | Read a gaussian formatted checkpoint file                   |
 | + | mol_fillatnumber     | fun          | mol            | Fill mol.atnumber using mol.atname                          |
