--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-11-23  Alberto Otero de la Roza  <aoterodelaroza@ucmerced.edu>
+
+	* src/mol_readlog.m: implemented gaussian output reader.
+
 2013-11-19  Alberto Otero de la Roza  <aoterodelaroza@ucmerced.edu>
 
 	* src/tex_dbstart.m: added metal4 texture.
