--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2013-11-24  Alberto Otero de la Roza  <aoterodelaroza@ucmerced.edu>
+
+	* src/rep_registertexture.m: added. I modified the texture
+	system. Now rep contain a list of strings and balls, etc. contain
+	integer indices to that list. The strings correspond to entries in
+	the texdb.
+
+	* src/...: lots of changes related to the handling of
+	textures. 
+
 2013-11-23  Alberto Otero de la Roza  <aoterodelaroza@ucmerced.edu>
 
 	* src/mol_readlog.m: implemented gaussian output reader.
