improved grid_mesh: many times faster now

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2013-11-24  Alberto Otero de la Roza  <aoterodelaroza@ucmerced.edu>
 
+	* src/grid_mesh.m: improved efficiency. TAGFEM now runs in 20
+	seconds.
+
 	* src/rep_registertexture.m: added. I modified the texture
 	system. Now rep contain a list of strings and balls, etc. contain
 	integer indices to that list. The strings correspond to entries in
