--- a/todo
+++ b/todo
@@ -1,3 +1,4 @@
+* mol_polyhedron can build polyhedra without centers.
 * there is a bug in cr_write_vasp (see test1)
 * cr_newcell handles the order of the vectors correctly. Check that the new cell is sane.
 * Routine for adaptively set the cylinder and sphere based on the number
