Reads xyz data. VTK installation intructions.
Only single structure xyz file by now is supported.
py/escher.txt contains the steps that need to be followed
ind order to be able to use the pythonic escher subdivision

--- a/todo
+++ b/todo
@@ -31,6 +31,8 @@
 Daniel
 --------
 * keyboard vtk window interaction (POVExport, PNG, camera position, ...)
+    s key : to solid
+    w key : to wireframe
 * NCIPlots(colourediso), critical points(polyhedra), ORTEP(ellipsoid),
     popplot
 * surface espresso input generation
