--- a/doc/devs.org
+++ b/doc/devs.org
@@ -185,6 +185,15 @@ v means variable (global)
 | x | idx      | array  | 1x3       | Array of vertex indices |
 | x | tex      | string |           | Texture                 |
 
+** Surface
+|   | Variable | Type   | Dim./Res. | Apropos                 |
+|---+----------+--------+-----------+-------------------------|
+| x | v        | array  | nvx3      | Vertices of the surface |
+| x | n        | array  | nvx3      | Normals at the vertices |
+| x | f        | array  | nfx3      | Faces                   |
+| x | ftex     | scalar | integer   | Texture index           |
+| x | frgb     | array  | 1x5       | Color vector (integer)  |
+
 ** Vertex
 
 |   | Variable | Type   | Dim./Res. | Apropos             |
