--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2014-01-02  Alberto Otero de la Roza  <aoterodelaroza@ucmerced.edu>
+
+	* src/rep_write_json.m: added. Write a json file.
+
 2013-12-21  Alberto Otero de la Roza  <aoterodelaroza@ucmerced.edu>
 
 	* src/surface_.m: added surface object.
