--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2014-01-16  Alberto Otero de la Roza  <aoterodelaroza@ucmerced.edu>
+
+	* src/cr_read_vasp.m: fixed bug r -> r' in cr_read_vasp.
+
+	* src/cr_rmatom.m: added. Removes atoms from the crystal.
+
 2014-01-06  Alberto Otero de la Roza  <aoterodelaroza@ucmerced.edu>
 
 	* src/mol_stick.m: the default behavior now is to color the stick
