--- a/doc/devs.org
+++ b/doc/devs.org
@@ -35,6 +35,7 @@ v means variable (global)
 | + | cr_insertvacuum   | fun      | cr        | insert vacuum in one of the crystal directions  |
 | + | cr_moveorigin     | fun      | cr        | translate the origin of the unit cell           |
 | + | cr_newcell        | fun      | cr        | transform to a different unit cell              |
+| + | cr_rmatom         | fun      | cr        | remove atoms from the crystal                   |
 | + | cr_molmotif       | fun      | mol,mask  | create mol by molecular completion in main cell |
 | + | cr_crystalbox     | fun      | mol,mask  | create mol by cutting a parallelepiped from cr  |
 | + | cr_spherebox      | fun      | mol       | create mol by cutting a sphere from cr          |
