cr.r in espresso fixed (?)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2014-01-19  Alberto Otero de la Roza  <aoterodelaroza@ucmerced.edu>
+
+	* src/cr_read_espresso.m: fixed potential bug in
+	cr_read_espresso. 
+
 2014-01-16  Alberto Otero de la Roza  <aoterodelaroza@ucmerced.edu>
 
 	* src/cr_read_vasp.m: fixed bug r -> r' in cr_read_vasp.
